--- a/projects/angular/src/styles/core/typography/_legacy-typography.scss
+++ b/projects/angular/src/styles/core/typography/_legacy-typography.scss
@@ -5,8 +5,8 @@
  * The full license information can be found in LICENSE in the root directory of this project.
  */
 
-@use '../../mixins' as *;
-@use '../typography/typography' as *;
+@use '../../mixins';
+@use '../typography/typography';
 
 $typography-h0-font-size: 2rem;
 $typography-h0-font-size-static: 2rem;
@@ -145,8 +145,8 @@ $typography-p8-line-height-static: 1.2em;
 
 // LEGACY FONT STYLES
 [cds-text*='h0'] {
-  $lh-gap: getLineHeightGap($typography-h0-line-height-static, $typography-h0-line-height);
-  @include LHE($lh-gap);
+  $lh-gap: mixins.getLineHeightGap($typography-h0-line-height-static, $typography-h0-line-height);
+  @include typography.LHE($lh-gap);
 
   font-family: $typography-header-font-family;
   font-size: $typography-h0-font-size;
@@ -157,8 +157,8 @@ $typography-p8-line-height-static: 1.2em;
 }
 
 [cds-text*='h1'] {
-  $lh-gap: getLineHeightGap($typography-h1-line-height-static, $typography-h1-line-height);
-  @include LHE($lh-gap);
+  $lh-gap: mixins.getLineHeightGap($typography-h1-line-height-static, $typography-h1-line-height);
+  @include typography.LHE($lh-gap);
 
   font-family: $typography-header-font-family;
   font-size: $typography-h1-font-size;
@@ -169,8 +169,8 @@ $typography-p8-line-height-static: 1.2em;
 }
 
 [cds-text*='h2'] {
-  $lh-gap: getLineHeightGap($typography-h2-line-height-static, $typography-h2-line-height);
-  @include LHE($lh-gap);
+  $lh-gap: mixins.getLineHeightGap($typography-h2-line-height-static, $typography-h2-line-height);
+  @include typography.LHE($lh-gap);
 
   font-family: $typography-header-font-family;
   font-size: $typography-h2-font-size;
@@ -181,8 +181,8 @@ $typography-p8-line-height-static: 1.2em;
 }
 
 [cds-text*='h3'] {
-  $lh-gap: getLineHeightGap($typography-h3-line-height-static, $typography-h3-line-height);
-  @include LHE($lh-gap);
+  $lh-gap: mixins.getLineHeightGap($typography-h3-line-height-static, $typography-h3-line-height);
+  @include typography.LHE($lh-gap);
 
   font-family: $typography-header-font-family;
   font-size: $typography-h3-font-size;
@@ -193,8 +193,8 @@ $typography-p8-line-height-static: 1.2em;
 }
 
 [cds-text*='h4'] {
-  $lh-gap: getLineHeightGap($typography-h4-line-height-static, $typography-h4-line-height);
-  @include LHE($lh-gap);
+  $lh-gap: mixins.getLineHeightGap($typography-h4-line-height-static, $typography-h4-line-height);
+  @include typography.LHE($lh-gap);
 
   font-family: $typography-header-font-family;
   font-size: $typography-h4-font-size;
@@ -205,8 +205,8 @@ $typography-p8-line-height-static: 1.2em;
 }
 
 [cds-text*='h5'] {
-  $lh-gap: getLineHeightGap($typography-h5-line-height-static, $typography-h5-line-height);
-  @include LHE($lh-gap);
+  $lh-gap: mixins.getLineHeightGap($typography-h5-line-height-static, $typography-h5-line-height);
+  @include typography.LHE($lh-gap);
 
   font-family: $typography-header-font-family;
   font-size: $typography-h5-font-size;
@@ -217,8 +217,8 @@ $typography-p8-line-height-static: 1.2em;
 }
 
 [cds-text*='h6'] {
-  $lh-gap: getLineHeightGap($typography-h6-line-height-static, $typography-h6-line-height);
-  @include LHE($lh-gap);
+  $lh-gap: mixins.getLineHeightGap($typography-h6-line-height-static, $typography-h6-line-height);
+  @include typography.LHE($lh-gap);
 
   font-family: $typography-header-font-family;
   font-size: $typography-h6-font-size;
@@ -229,8 +229,8 @@ $typography-p8-line-height-static: 1.2em;
 }
 
 [cds-text*='p0'] {
-  $lh-gap: getLineHeightGap($typography-p0-line-height-static, $typography-p0-line-height);
-  @include LHE($lh-gap);
+  $lh-gap: mixins.getLineHeightGap($typography-p0-line-height-static, $typography-p0-line-height);
+  @include typography.LHE($lh-gap);
 
   font-size: $typography-p0-font-size;
   font-weight: $typography-p0-font-weight;
@@ -240,8 +240,8 @@ $typography-p8-line-height-static: 1.2em;
 }
 
 [cds-text*='p1'] {
-  $lh-gap: getLineHeightGap($typography-p1-line-height-static, $typography-p1-line-height);
-  @include LHE($lh-gap);
+  $lh-gap: mixins.getLineHeightGap($typography-p1-line-height-static, $typography-p1-line-height);
+  @include typography.LHE($lh-gap);
 
   font-size: $typography-p1-font-size;
   font-weight: $typography-p1-font-weight;
@@ -251,8 +251,8 @@ $typography-p8-line-height-static: 1.2em;
 }
 
 [cds-text*='p2'] {
-  $lh-gap: getLineHeightGap($typography-p2-line-height-static, $typography-p2-line-height);
-  @include LHE($lh-gap);
+  $lh-gap: mixins.getLineHeightGap($typography-p2-line-height-static, $typography-p2-line-height);
+  @include typography.LHE($lh-gap);
 
   font-size: $typography-p2-font-size;
   font-weight: $typography-p2-font-weight;
@@ -262,8 +262,8 @@ $typography-p8-line-height-static: 1.2em;
 }
 
 [cds-text*='p3'] {
-  $lh-gap: getLineHeightGap($typography-p3-line-height-static, $typography-p3-line-height);
-  @include LHE($lh-gap);
+  $lh-gap: mixins.getLineHeightGap($typography-p3-line-height-static, $typography-p3-line-height);
+  @include typography.LHE($lh-gap);
 
   font-size: $typography-p3-font-size;
   font-weight: $typography-p3-font-weight;
@@ -273,8 +273,8 @@ $typography-p8-line-height-static: 1.2em;
 }
 
 [cds-text*='p4'] {
-  $lh-gap: getLineHeightGap($typography-p4-line-height-static, $typography-p4-line-height);
-  @include LHE($lh-gap);
+  $lh-gap: mixins.getLineHeightGap($typography-p4-line-height-static, $typography-p4-line-height);
+  @include typography.LHE($lh-gap);
 
   font-size: $typography-p4-font-size;
   font-weight: $typography-p4-font-weight;
@@ -284,8 +284,8 @@ $typography-p8-line-height-static: 1.2em;
 }
 
 [cds-text*='p5'] {
-  $lh-gap: getLineHeightGap($typography-p5-line-height-static, $typography-p5-line-height);
-  @include LHE($lh-gap);
+  $lh-gap: mixins.getLineHeightGap($typography-p5-line-height-static, $typography-p5-line-height);
+  @include typography.LHE($lh-gap);
 
   font-size: $typography-p5-font-size;
   font-weight: $typography-p5-font-weight;
@@ -295,8 +295,8 @@ $typography-p8-line-height-static: 1.2em;
 }
 
 [cds-text*='p6'] {
-  $lh-gap: getLineHeightGap($typography-p6-line-height-static, $typography-p6-line-height);
-  @include LHE($lh-gap);
+  $lh-gap: mixins.getLineHeightGap($typography-p6-line-height-static, $typography-p6-line-height);
+  @include typography.LHE($lh-gap);
 
   font-size: $typography-p6-font-size;
   font-weight: $typography-p6-font-weight;
@@ -306,8 +306,8 @@ $typography-p8-line-height-static: 1.2em;
 }
 
 [cds-text*='p7'] {
-  $lh-gap: getLineHeightGap($typography-p7-line-height-static, $typography-p7-line-height);
-  @include LHE($lh-gap);
+  $lh-gap: mixins.getLineHeightGap($typography-p7-line-height-static, $typography-p7-line-height);
+  @include typography.LHE($lh-gap);
 
   font-size: $typography-p7-font-size;
   font-weight: $typography-p7-font-weight;
@@ -317,8 +317,8 @@ $typography-p8-line-height-static: 1.2em;
 }
 
 [cds-text*='p8'] {
-  $lh-gap: getLineHeightGap($typography-p8-line-height-static, $typography-p8-line-height);
-  @include LHE($lh-gap);
+  $lh-gap: mixins.getLineHeightGap($typography-p8-line-height-static, $typography-p8-line-height);
+  @include typography.LHE($lh-gap);
 
   font-size: $typography-p8-font-size;
   font-weight: $typography-p8-font-weight;
