--- a/projects/angular/src/styles/core/layout/_spacing.scss
+++ b/projects/angular/src/styles/core/layout/_spacing.scss
@@ -14,19 +14,18 @@
 // a compact syntax to prevent an excessive amount of generated CSS.
 // [type]-[side]@[breakpoint]:[size]
 
-@use './mixins/mixins' as *;
-@use 'optimize' as *;
+@use './mixins/mixins';
 
-@include generateGaps();
-@include spacers();
-@include axisSpacers();
-@include sideSpacers();
+@include mixins.generateGaps();
+@include mixins.spacers();
+@include mixins.axisSpacers();
+@include mixins.sideSpacers();
 
-@each $breakpoint, $breakpoint-value in $cds-layout-breakpoints {
+@each $breakpoint, $breakpoint-value in mixins.$cds-layout-breakpoints {
   @media (min-width: $breakpoint-value) {
-    @include generateGaps($breakpoint);
-    @include spacers($breakpoint);
-    @include axisSpacers($breakpoint);
-    @include sideSpacers($breakpoint);
+    @include mixins.generateGaps($breakpoint);
+    @include mixins.spacers($breakpoint);
+    @include mixins.axisSpacers($breakpoint);
+    @include mixins.sideSpacers($breakpoint);
   }
 }
