--- a/projects/angular/src/styles/core/layout/_type-vertical.scss
+++ b/projects/angular/src/styles/core/layout/_type-vertical.scss
@@ -5,51 +5,51 @@
  * The full license information can be found in LICENSE in the root directory of this project.
  */
 
-@use './mixins/mixins' as *;
-@use 'optimize' as *;
+@use './mixins/mixins' as mixins;
+@use 'optimize';
 
 @mixin generateVerticalAxisAlignment($breakpoint: null) {
-  [#{$layout}~='#{$vertical}'] {
-    &[#{$layout}*='#{$align}#{$breakpoint}:#{$top}'] {
+  [#{optimize.$layout}~='#{optimize.$vertical}'] {
+    &[#{optimize.$layout}*='#{optimize.$align}#{$breakpoint}:#{optimize.$top}'] {
       justify-content: flex-start;
     }
 
-    &[#{$layout}*='#{$align}#{$breakpoint}:#{$bottom}'] {
+    &[#{optimize.$layout}*='#{optimize.$align}#{$breakpoint}:#{optimize.$bottom}'] {
       justify-content: flex-end;
     }
 
-    &[#{$layout}*='#{$align}#{$breakpoint}:#{$left}'] {
+    &[#{optimize.$layout}*='#{optimize.$align}#{$breakpoint}:#{optimize.$left}'] {
       align-items: flex-start;
     }
 
-    &[#{$layout}*='#{$align}#{$breakpoint}:#{$right}'] {
+    &[#{optimize.$layout}*='#{optimize.$align}#{$breakpoint}:#{optimize.$right}'] {
       align-items: flex-end;
     }
 
-    &[#{$layout}*='#{$align}#{$breakpoint}:#{$vertical-center}'] {
+    &[#{optimize.$layout}*='#{optimize.$align}#{$breakpoint}:#{optimize.$vertical-center}'] {
       justify-content: center;
     }
 
-    &[#{$layout}*='#{$align}#{$breakpoint}:#{$horizontal-center}'] {
+    &[#{optimize.$layout}*='#{optimize.$align}#{$breakpoint}:#{optimize.$horizontal-center}'] {
       align-items: center;
     }
 
-    &[#{$layout}*='#{$align}#{$breakpoint}:#{$center}'] {
+    &[#{optimize.$layout}*='#{optimize.$align}#{$breakpoint}:#{optimize.$center}'] {
       align-items: center;
       justify-content: center;
     }
   }
 }
 @mixin generateVerticalOrder($breakpoint: null) {
-  [#{$layout}~='#{$vertical}'] {
-    &[#{$layout}*='order#{$breakpoint}:reverse'] {
+  [#{optimize.$layout}~='#{optimize.$vertical}'] {
+    &[#{optimize.$layout}*='order#{$breakpoint}:reverse'] {
       flex-direction: column-reverse;
     }
   }
 }
 @mixin generateVerticalStretch($breakpoint: null) {
-  [#{$layout}~='#{$vertical}'] {
-    &[#{$layout}*='#{$align}#{$breakpoint}:#{$vertical-stretch}'] {
+  [#{optimize.$layout}~='#{optimize.$vertical}'] {
+    &[#{optimize.$layout}*='#{optimize.$align}#{$breakpoint}:#{optimize.$vertical-stretch}'] {
       justify-content: stretch;
 
       & > * {
@@ -57,11 +57,11 @@
       }
     }
 
-    &[#{$layout}*='#{$align}#{$breakpoint}:#{$horizontal-stretch}'] {
+    &[#{optimize.$layout}*='#{optimize.$align}#{$breakpoint}:#{optimize.$horizontal-stretch}'] {
       align-items: stretch;
     }
 
-    &[#{$layout}*='#{$align}#{$breakpoint}:#{$stretch}'] {
+    &[#{optimize.$layout}*='#{optimize.$align}#{$breakpoint}:#{optimize.$stretch}'] {
       align-items: stretch;
       justify-content: stretch;
 
@@ -72,31 +72,31 @@
   }
 }
 @mixin generateVerticalItemAlignment($breakpoint: null) {
-  [#{$layout}~='#{$vertical}'] {
-    & > [#{$layout}*='#{$align}#{$breakpoint}:#{$center}'],
-    & > [#{$layout}*='#{$align}#{$breakpoint}:#{$vertical-center}'] {
+  [#{optimize.$layout}~='#{optimize.$vertical}'] {
+    & > [#{optimize.$layout}*='#{optimize.$align}#{$breakpoint}:#{optimize.$center}'],
+    & > [#{optimize.$layout}*='#{optimize.$align}#{$breakpoint}:#{optimize.$vertical-center}'] {
       margin-top: auto;
       margin-bottom: auto;
     }
 
-    & > [#{$layout}*='#{$align}#{$breakpoint}:#{$center}'],
-    & > [#{$layout}*='#{$align}#{$breakpoint}:#{$horizontal-center}'] {
+    & > [#{optimize.$layout}*='#{optimize.$align}#{$breakpoint}:#{optimize.$center}'],
+    & > [#{optimize.$layout}*='#{optimize.$align}#{$breakpoint}:#{optimize.$horizontal-center}'] {
       align-self: center;
     }
 
-    & > [#{$layout}*='#{$align}#{$breakpoint}:#{$top}'] {
+    & > [#{optimize.$layout}*='#{optimize.$align}#{$breakpoint}:#{optimize.$top}'] {
       margin-bottom: auto !important;
     }
 
-    & > [#{$layout}*='#{$align}#{$breakpoint}:#{$bottom}'] {
+    & > [#{optimize.$layout}*='#{optimize.$align}#{$breakpoint}:#{optimize.$bottom}'] {
       margin-top: auto !important;
     }
 
-    & > [#{$layout}*='#{$align}#{$breakpoint}:#{$right}'] {
+    & > [#{optimize.$layout}*='#{optimize.$align}#{$breakpoint}:#{optimize.$right}'] {
       margin-left: auto;
     }
 
-    & > [#{$layout}*='#{$align}#{$breakpoint}:#{$left}'] {
+    & > [#{optimize.$layout}*='#{optimize.$align}#{$breakpoint}:#{optimize.$left}'] {
       margin-right: auto;
     }
   }
@@ -108,7 +108,7 @@
   @include generateVerticalItemAlignment($breakpoint);
 }
 
-[#{$layout}~='#{$vertical}'] {
+[#{optimize.$layout}~='#{optimize.$vertical}'] {
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -118,7 +118,7 @@
 
 @include generateVerticalAlignments();
 
-@each $breakpoint, $breakpoint-value in $cds-layout-breakpoints {
+@each $breakpoint, $breakpoint-value in mixins.$cds-layout-breakpoints {
   @media (min-width: $breakpoint-value) {
     @include generateVerticalAlignments($breakpoint);
   }
