--- a/projects/angular/src/styles/core/typography/_typography.scss
+++ b/projects/angular/src/styles/core/typography/_typography.scss
@@ -5,20 +5,20 @@
  * The full license information can be found in LICENSE in the root directory of this project.
  */
 
-@use '../tokens/variables.tokens' as *;
+@use '../tokens/variables.tokens' as tokens;
 @use '../../mixins';
 
 @mixin LHE($lh-gap: 0.5em) {
   @include mixins.line-height-eraser(
     $lh-gap,
-    $cds-global-typography-top-gap-height,
-    $cds-global-typography-ascender-height,
-    $cds-global-typography-x-height
+    tokens.$cds-global-typography-top-gap-height,
+    tokens.$cds-global-typography-ascender-height,
+    tokens.$cds-global-typography-x-height
   );
 }
 
 [cds-text] {
-  font-family: $cds-global-typography-font-family;
+  font-family: tokens.$cds-global-typography-font-family;
   margin-top: 0;
   margin-bottom: 0;
 
@@ -39,8 +39,8 @@
 [cds-text*='title'],
 [cds-text*='section'],
 [cds-text*='subsection'] {
-  font-family: $cds-global-typography-header-font-family;
-  color: $cds-global-typography-color-400;
+  font-family: tokens.$cds-global-typography-header-font-family;
+  color: tokens.$cds-global-typography-color-400;
 }
 
 [cds-text*='body'],
@@ -48,7 +48,7 @@
 [cds-text*='secondary'],
 [cds-text*='caption'],
 [cds-text*='smallcaption'] {
-  color: $cds-global-typography-color-500;
+  color: tokens.$cds-global-typography-color-500;
 }
 
 [cds-text*='inline'] {
@@ -57,82 +57,88 @@
 }
 
 [cds-text*='display'] {
-  $lh-gap: getLineHeightGap(
-    $cds-global-typography-display-line-height-static,
-    $cds-global-typography-display-line-height
+  $lh-gap: mixins.getLineHeightGap(
+    tokens.$cds-global-typography-display-line-height-static,
+    tokens.$cds-global-typography-display-line-height
   );
   @include LHE($lh-gap);
 
-  font-size: $cds-global-typography-display-font-size;
-  font-weight: $cds-global-typography-display-font-weight;
-  line-height: $cds-global-typography-display-line-height;
-  letter-spacing: $cds-global-typography-display-letter-spacing;
+  font-size: tokens.$cds-global-typography-display-font-size;
+  font-weight: tokens.$cds-global-typography-display-font-weight;
+  line-height: tokens.$cds-global-typography-display-line-height;
+  letter-spacing: tokens.$cds-global-typography-display-letter-spacing;
 }
 
 [cds-text*='heading'], // TODO(CDE-821): Remove heading in v7
 [cds-text*='headline'] {
-  $lh-gap: getLineHeightGap(
-    $cds-global-typography-heading-line-height-static,
-    $cds-global-typography-heading-line-height
+  $lh-gap: mixins.getLineHeightGap(
+    tokens.$cds-global-typography-heading-line-height-static,
+    tokens.$cds-global-typography-heading-line-height
   );
   @include LHE($lh-gap);
 
-  font-size: $cds-global-typography-heading-font-size;
-  font-weight: $cds-global-typography-heading-font-weight;
-  line-height: $cds-global-typography-heading-line-height;
-  letter-spacing: $cds-global-typography-heading-letter-spacing;
+  font-size: tokens.$cds-global-typography-heading-font-size;
+  font-weight: tokens.$cds-global-typography-heading-font-weight;
+  line-height: tokens.$cds-global-typography-heading-line-height;
+  letter-spacing: tokens.$cds-global-typography-heading-letter-spacing;
 }
 
 [cds-text*='title'] {
-  $lh-gap: getLineHeightGap($cds-global-typography-title-line-height-static, $cds-global-typography-title-line-height);
+  $lh-gap: mixins.getLineHeightGap(
+    tokens.$cds-global-typography-title-line-height-static,
+    tokens.$cds-global-typography-title-line-height
+  );
   @include LHE($lh-gap);
 
-  font-size: $cds-global-typography-title-font-size;
-  font-weight: $cds-global-typography-title-font-weight;
-  line-height: $cds-global-typography-title-line-height;
-  letter-spacing: $cds-global-typography-title-letter-spacing;
+  font-size: tokens.$cds-global-typography-title-font-size;
+  font-weight: tokens.$cds-global-typography-title-font-weight;
+  line-height: tokens.$cds-global-typography-title-line-height;
+  letter-spacing: tokens.$cds-global-typography-title-letter-spacing;
 }
 
 [cds-text*='section'] {
-  $lh-gap: getLineHeightGap(
-    $cds-global-typography-section-line-height-static,
-    $cds-global-typography-section-line-height
+  $lh-gap: mixins.getLineHeightGap(
+    tokens.$cds-global-typography-section-line-height-static,
+    tokens.$cds-global-typography-section-line-height
   );
   @include LHE($lh-gap);
 
-  font-size: $cds-global-typography-section-font-size;
-  font-weight: $cds-global-typography-section-font-weight;
-  line-height: $cds-global-typography-section-line-height;
-  letter-spacing: $cds-global-typography-section-letter-spacing;
+  font-size: tokens.$cds-global-typography-section-font-size;
+  font-weight: tokens.$cds-global-typography-section-font-weight;
+  line-height: tokens.$cds-global-typography-section-line-height;
+  letter-spacing: tokens.$cds-global-typography-section-letter-spacing;
 }
 
 [cds-text*='subsection'] {
-  $lh-gap: getLineHeightGap(
-    $cds-global-typography-subsection-line-height-static,
-    $cds-global-typography-subsection-line-height
+  $lh-gap: mixins.getLineHeightGap(
+    tokens.$cds-global-typography-subsection-line-height-static,
+    tokens.$cds-global-typography-subsection-line-height
   );
   @include LHE($lh-gap);
 
-  font-size: $cds-global-typography-subsection-font-size;
-  font-weight: $cds-global-typography-subsection-font-weight;
-  line-height: $cds-global-typography-subsection-line-height;
-  letter-spacing: $cds-global-typography-subsection-letter-spacing;
+  font-size: tokens.$cds-global-typography-subsection-font-size;
+  font-weight: tokens.$cds-global-typography-subsection-font-weight;
+  line-height: tokens.$cds-global-typography-subsection-line-height;
+  letter-spacing: tokens.$cds-global-typography-subsection-letter-spacing;
 }
 
 [cds-text*='body'] {
-  $lh-gap: getLineHeightGap($cds-global-typography-body-line-height-static, $cds-global-typography-body-line-height);
+  $lh-gap: mixins.getLineHeightGap(
+    tokens.$cds-global-typography-body-line-height-static,
+    tokens.$cds-global-typography-body-line-height
+  );
   @include mixins.line-height-eraser(
     $lh-gap,
-    $cds-global-typography-top-gap-height,
-    $cds-global-typography-ascender-height,
-    $cds-global-typography-x-height,
+    tokens.$cds-global-typography-top-gap-height,
+    tokens.$cds-global-typography-ascender-height,
+    tokens.$cds-global-typography-x-height,
     0.1em
   );
 
-  font-weight: $cds-global-typography-body-font-weight;
-  font-size: $cds-global-typography-body-font-size;
-  letter-spacing: $cds-global-typography-body-letter-spacing;
-  line-height: $cds-global-typography-body-line-height;
+  font-weight: tokens.$cds-global-typography-body-font-weight;
+  font-size: tokens.$cds-global-typography-body-font-size;
+  letter-spacing: tokens.$cds-global-typography-body-letter-spacing;
+  line-height: tokens.$cds-global-typography-body-line-height;
 }
 
 // remove extra margin on the body tag to avoid an unnecessary scrollbar
@@ -141,123 +147,123 @@ body[cds-text*='body'] {
 }
 
 [cds-text*='message'] {
-  $lh-gap: getLineHeightGap(
-    $cds-global-typography-message-line-height-static,
-    $cds-global-typography-message-line-height
+  $lh-gap: mixins.getLineHeightGap(
+    tokens.$cds-global-typography-message-line-height-static,
+    tokens.$cds-global-typography-message-line-height
   );
   @include LHE($lh-gap);
 
-  font-size: $cds-global-typography-message-font-size;
-  font-weight: $cds-global-typography-message-font-weight;
-  line-height: $cds-global-typography-message-line-height;
-  letter-spacing: $cds-global-typography-message-letter-spacing;
+  font-size: tokens.$cds-global-typography-message-font-size;
+  font-weight: tokens.$cds-global-typography-message-font-weight;
+  line-height: tokens.$cds-global-typography-message-line-height;
+  letter-spacing: tokens.$cds-global-typography-message-letter-spacing;
 }
 
 [cds-text*='secondary'] {
-  $lh-gap: getLineHeightGap(
-    $cds-global-typography-secondary-line-height-static,
-    $cds-global-typography-secondary-line-height
+  $lh-gap: mixins.getLineHeightGap(
+    tokens.$cds-global-typography-secondary-line-height-static,
+    tokens.$cds-global-typography-secondary-line-height
   );
   @include LHE($lh-gap);
 
-  font-size: $cds-global-typography-secondary-font-size;
-  font-weight: $cds-global-typography-secondary-font-weight;
-  line-height: $cds-global-typography-secondary-line-height;
-  letter-spacing: $cds-global-typography-secondary-letter-spacing;
+  font-size: tokens.$cds-global-typography-secondary-font-size;
+  font-weight: tokens.$cds-global-typography-secondary-font-weight;
+  line-height: tokens.$cds-global-typography-secondary-line-height;
+  letter-spacing: tokens.$cds-global-typography-secondary-letter-spacing;
 }
 
 [cds-text*='caption'] {
-  $lh-gap: getLineHeightGap(
-    $cds-global-typography-caption-line-height-static,
-    $cds-global-typography-caption-line-height
+  $lh-gap: mixins.getLineHeightGap(
+    tokens.$cds-global-typography-caption-line-height-static,
+    tokens.$cds-global-typography-caption-line-height
   );
   @include LHE($lh-gap);
 
-  font-size: $cds-global-typography-caption-font-size;
-  font-weight: $cds-global-typography-caption-font-weight;
-  line-height: $cds-global-typography-caption-line-height;
-  letter-spacing: $cds-global-typography-caption-letter-spacing;
+  font-size: tokens.$cds-global-typography-caption-font-size;
+  font-weight: tokens.$cds-global-typography-caption-font-weight;
+  line-height: tokens.$cds-global-typography-caption-line-height;
+  letter-spacing: tokens.$cds-global-typography-caption-letter-spacing;
 }
 
 [cds-text*='smallcaption'] {
-  $lh-gap: getLineHeightGap(
-    $cds-global-typography-smallcaption-line-height-static,
-    $cds-global-typography-smallcaption-line-height
+  $lh-gap: mixins.getLineHeightGap(
+    tokens.$cds-global-typography-smallcaption-line-height-static,
+    tokens.$cds-global-typography-smallcaption-line-height
   );
   @include LHE($lh-gap);
 
-  font-size: $cds-global-typography-smallcaption-font-size;
-  font-weight: $cds-global-typography-smallcaption-font-weight;
-  line-height: $cds-global-typography-smallcaption-line-height;
-  letter-spacing: $cds-global-typography-smallcaption-letter-spacing;
+  font-size: tokens.$cds-global-typography-smallcaption-font-size;
+  font-weight: tokens.$cds-global-typography-smallcaption-font-weight;
+  line-height: tokens.$cds-global-typography-smallcaption-line-height;
+  letter-spacing: tokens.$cds-global-typography-smallcaption-letter-spacing;
 }
 
 [cds-text~='link'] {
-  color: $cds-global-typography-link-color !important;
+  color: tokens.$cds-global-typography-link-color !important;
   text-decoration: underline !important;
   line-height: inherit !important;
   font-size: inherit !important;
 
   &:focus {
-    outline: #{$cds-alias-object-interaction-outline};
-    outline-offset: #{$cds-alias-object-interaction-outline-offset};
+    outline: #{tokens.$cds-alias-object-interaction-outline};
+    outline-offset: #{tokens.$cds-alias-object-interaction-outline-offset};
   }
 
   &:hover {
-    color: $cds-global-typography-link-color-hover !important;
+    color: tokens.$cds-global-typography-link-color-hover !important;
   }
 
   &:visited:not([cds-text~='static']),
   &[cds-text~='visited'] {
-    color: $cds-global-typography-link-color-visited !important;
+    color: tokens.$cds-global-typography-link-color-visited !important;
 
     &:hover {
-      color: $cds-global-typography-link-color-visited-hover !important;
+      color: tokens.$cds-global-typography-link-color-visited-hover !important;
     }
   }
 }
 
 [cds-text='link']:focus {
-  outline: #{$cds-alias-object-interaction-outline-webkit};
+  outline: #{tokens.$cds-alias-object-interaction-outline-webkit};
 }
 
 [cds-text~='code'] {
-  color: $cds-alias-status-danger;
+  color: tokens.$cds-alias-status-danger;
   font-family: monospace;
 }
 
 // hr
 [cds-divider] {
   display: block;
-  height: $cds-alias-object-border-width-100;
+  height: tokens.$cds-alias-object-border-width-100;
   overflow: hidden;
-  box-shadow: $cds-alias-object-border-color 0 0 0 $cds-alias-object-border-width-100 inset;
+  box-shadow: tokens.$cds-alias-object-border-color 0 0 0 tokens.$cds-alias-object-border-width-100 inset;
 }
 
 // font-weight
 
 [cds-text~='extrabold'] {
-  font-weight: $cds-global-typography-font-weight-extrabold !important;
+  font-weight: tokens.$cds-global-typography-font-weight-extrabold !important;
 }
 
 [cds-text~='bold'] {
-  font-weight: $cds-global-typography-font-weight-bold !important;
+  font-weight: tokens.$cds-global-typography-font-weight-bold !important;
 }
 
 [cds-text~='semibold'] {
-  font-weight: $cds-global-typography-font-weight-semibold !important;
+  font-weight: tokens.$cds-global-typography-font-weight-semibold !important;
 }
 
 [cds-text~='medium'] {
-  font-weight: $cds-global-typography-font-weight-medium !important;
+  font-weight: tokens.$cds-global-typography-font-weight-medium !important;
 }
 
 [cds-text~='regular'] {
-  font-weight: $cds-global-typography-font-weight-regular !important;
+  font-weight: tokens.$cds-global-typography-font-weight-regular !important;
 }
 
 [cds-text~='light'] {
-  font-weight: $cds-global-typography-font-weight-light !important;
+  font-weight: tokens.$cds-global-typography-font-weight-light !important;
 }
 
 // transforms
@@ -303,7 +309,7 @@ body[cds-text*='body'] {
 
 // monospace
 [cds-text~='monospace'] {
-  font-family: $cds-global-typography-monospace-font-family;
+  font-family: tokens.$cds-global-typography-monospace-font-family;
 }
 
 // https://seek-oss.github.io/capsize/
